; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/l2_packet/extr_l2_packet_none.c_l2_packet_init_bridge.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/l2_packet/extr_l2_packet_none.c_l2_packet_init_bridge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.l2_packet_data = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.l2_packet_data* @l2_packet_init_bridge(i8* %0, i8* %1, i32* %2, i16 zeroext %3, void (i8*, i32*, i32*, i64)* %4, i8* %5, i32 %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i16, align 2
  %12 = alloca void (i8*, i32*, i32*, i64)*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  store i8* %0, i8** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32* %2, i32** %10, align 8
  store i16 %3, i16* %11, align 2
  store void (i8*, i32*, i32*, i64)* %4, void (i8*, i32*, i32*, i64)** %12, align 8
  store i8* %5, i8** %13, align 8
  store i32 %6, i32* %14, align 4
  %15 = load i8*, i8** %8, align 8
  %16 = load i32*, i32** %10, align 8
  %17 = load i16, i16* %11, align 2
  %18 = load void (i8*, i32*, i32*, i64)*, void (i8*, i32*, i32*, i64)** %12, align 8
  %19 = load i8*, i8** %13, align 8
  %20 = load i32, i32* %14, align 4
  %21 = call %struct.l2_packet_data* @l2_packet_init(i8* %15, i32* %16, i16 zeroext %17, void (i8*, i32*, i32*, i64)* %18, i8* %19, i32 %20)
  ret %struct.l2_packet_data* %21
}

declare dso_local %struct.l2_packet_data* @l2_packet_init(i8*, i32*, i16 zeroext, void (i8*, i32*, i32*, i64)*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
